# openstack-rate-limit-middleware

./: .gitignore  .stestr.conf  .testr.conf  .travis.yml  AUTHORS  ChangeLog  Makefile  README.md  index.html  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  install.rst  testing.rst  user.rst
docs/: configuration.md  configure.md  draft_limes.md  install.md  strategies.md  testing.md  user.md
etc/: nova.yaml  swift.yaml
rate_limit/: __init__.py  backend.py  common.py  errors.py  limes.py  limes_types.py  log.py  provider.py  rate_limit.py  response.py  strategy.py  units.py  utils.py
rate_limit/lua/: redis_sliding_window.lua
rate_limit/tests/: fake.py  test_actiongroups.py  test_limes.py  test_limesratelimitprovider.py  test_middleware.py  test_middleware_redis.py  test_parse_config.py  test_response.py  test_units.py
rate_limit/tests/fixtures/: groups.yaml  limes.json  nova.yaml  swift.yaml
tools/: tox_install.sh
