[metadata]
name = rate-limit-middleware
summary = OpenStack Rate Limit Middleware
description-file = README.md
license = Apache-2
author = SAP
author-email = arno.uhlig@sap.com
home-page = https://github.com/sapcc/openstack-rate-limit-middleware
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
   rate_limit

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
paste.filter_factory =
    rate-limit = rate_limit:OpenStackRateLimitMiddleware.factory

rate-limit.middleware =
    rate-limit = rate_limit:OpenStackRateLimitMiddleware

[wheel]
universal = 1
